rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__reduce_by__reduce_by_time_dim.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/reduce_by.rs
expression: result
---
orders__status | orders__created_at_month | orders__amount_reduce_created_at
---------------+--------------------------+---------------------------------
cancelled      | 2024-01-01 00:00:00      | 200.00                          
cancelled      | 2024-02-01 00:00:00      | 200.00                          
cancelled      | 2024-03-01 00:00:00      | 200.00                          
completed      | 2024-01-01 00:00:00      | 1400.00                         
completed      | 2024-02-01 00:00:00      | 1400.00                         
completed      | 2024-03-01 00:00:00      | 1400.00                         
pending        | 2024-01-01 00:00:00      | 650.00                          
pending        | 2024-02-01 00:00:00      | 650.00                          
pending        | 2024-03-01 00:00:00      | 650.00
