rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__reduce_by__reduce_by_time_dimension.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/reduce_by.rs
expression: result
---
orders__status | orders__created_at_month | orders__total_amount | orders__amount_reduce_time
---------------+--------------------------+----------------------+---------------------------
cancelled      | 2024-01-01 00:00:00      | 50.00                | 200.00                    
cancelled      | 2024-02-01 00:00:00      | 50.00                | 200.00                    
cancelled      | 2024-03-01 00:00:00      | 100.00               | 200.00                    
completed      | 2024-01-01 00:00:00      | 300.00               | 1400.00                   
completed      | 2024-02-01 00:00:00      | 500.00               | 1400.00                   
completed      | 2024-03-01 00:00:00      | 600.00               | 1400.00                   
pending        | 2024-01-01 00:00:00      | 150.00               | 650.00                    
pending        | 2024-02-01 00:00:00      | 200.00               | 650.00                    
pending        | 2024-03-01 00:00:00      | 300.00               | 650.00
