rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__reduce_by__reduce_by_with_time.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/reduce_by.rs
expression: result
---
orders__category | orders__created_at_month | orders__amount_reduce_category
-----------------+--------------------------+-------------------------------
books            | 2024-01-01 00:00:00      | 500.00                        
books            | 2024-02-01 00:00:00      | 750.00                        
books            | 2024-03-01 00:00:00      | 1000.00                       
clothing         | 2024-03-01 00:00:00      | 1000.00                       
clothing         | 2024-02-01 00:00:00      | 750.00                        
clothing         | 2024-01-01 00:00:00      | 500.00                        
electronics      | 2024-01-01 00:00:00      | 500.00                        
electronics      | 2024-03-01 00:00:00      | 1000.00                       
electronics      | 2024-02-01 00:00:00      | 750.00
